--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "http-server": "^14.1.1",
     "single-file-cli": "^2.0.54",
     "vite": "^5.4.0",
     "vite-plugin-https-imports": "^0.1.0"
