--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "scripts": {
-    "build": "cd ./en-EN && ./build.sh && cd ../fr-FR && ./build.sh",
-    "serve-en": "npx http-server ./en-EN",
-    "serve-fr": "npx http-server ./fr-FR",
-    "serve-en-dist": "npx http-server ./en-EN/dist",
-    "serve-fr-dist": "npx http-server ./fr-FR/dist"
+    "build": "cd ./en-EN && ./build.sh && cd ../fr-FR && ./build.sh"
   },
   "devDependencies": {
-    "http-server": "^14.1.1",
     "single-file-cli": "^2.0.54",
     "vite": "^5.4.0",
     "vite-plugin-https-imports": "^0.1.0"
