--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "type": "module",
   "scripts": {
     "build": "cd ./en-EN && ./build.sh && cd ../fr-FR && ./build.sh"
   },
   "devDependencies": {
+    "axios": "^1.7.4",
+    "chalk": "^5.3.0",
+    "inclusion": "^1.0.1",
+    "minimatch": "^10.0.1",
+    "ora": "^8.0.1",
     "single-file-cli": "^2.0.55",
-    "vite": "^5.4.0",
-    "vite-plugin-https-imports": "^0.1.0"
+    "vite": "^5.4.0"
   }
 }
