--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "scripts": {
     "build": "cd ./en-EN && ./build.sh && cd ../fr-FR && ./build.sh"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "devDependencies": {
-    "axios": "^1.7.4",
-    "chalk": "^5.3.0",
+    "axios": "^1.7.9",
+    "chalk": "^5.4.1",
     "inclusion": "^1.0.1",
     "minimatch": "^10.0.1",
-    "ora": "^8.0.1",
-    "single-file-cli": "^2.0.68",
-    "vite": "^5.4.9"
+    "ora": "^8.1.1",
+    "single-file-cli": "^2.0.73",
+    "vite": "^6.0.6"
   }
 }
