--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "build": "cd ./en-EN && ./build.sh && cd ../fr-FR && ./build.sh"
+    "build": "cd ./en-EN && ./build.sh && cd ../fr-FR && ./build.sh",
+    "build-pdf": "npx md-to-pdf SUMMARY.md"
   },
   "engines": {
     "node": ">=22.0.0"
@@ -13,6 +14,7 @@
     "minimatch": "^10.0.1",
     "ora": "^8.1.1",
     "single-file-cli": "^2.0.73",
-    "vite": "^6.0.6"
+    "vite": "^6.0.6",
+    "md-to-pdf": "^5.2.4"
   }
 }
